--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,15 @@ node_modules
 /coverage
 
 # production
-/build
-
+build
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+env.sh
 
 npm-debug.log*
 yarn-debug.log*
