--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "react": "^17.0.1",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
@@ -47,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:2000"
+  "proxy": "http://api:2000"
 }
